--- a/writing/main.tex
+++ b/writing/main.tex
@@ -35,23 +35,31 @@
 - in detail discription:
 %分析の結果、政策領域に対する注目度が高まることで、議会の生産性が低下し得ることが示された。加えて、こうした影響は議会の審議段階によっても異なることが観察された。
 \\
-　議会の立法生産性と社会的注目度との関係は、その重要性に比して分析が少ない\footnote{重要な例外として\citet*{Adler2013-ay}}。本稿では、政策領域への注目度と立法生産との関係を長期のデータから検討することで、従来の分析では析出されてこなかった関係を示す。\\
-　加えて、先行研究では議会審議の程度を論じる際に、異なる法案審議の段階を用いた分析がなされてきた。本稿では、異なる審議段階における議会の応答性を検討することで、社会的な注目度が法案審議に対して与える影響は、どの段階の法案審議かによっても異なっていることを指摘する。\\
+　議会の立法生産性と社会的注目度との関係は、その重要性に比して分析が少ない\footnote{重要な例外として\citet*{Adler2013-ay}}。本稿では政策領域への注目度と立法生産との関係を分析することで、その重要性を確認すると共に従来の議論で論じられてこなかった関係性の存在を指摘する。\\
+　また、先行研究では議会審議の程度を論じる際に、異なる法案審議の段階を用いた分析がなされてきた。本稿では、異なる審議段階における議会の応答性を検討することで、社会的な注目度が法案審議に対して与える影響は、どの段階の法案審議かによっても異なっていることを指摘する。\\
 
 \section{先行研究}
 \subsection{立法生産性の説明モデル}
-　議会の立法生産性についての議論は、David Mayhewの\textit{Divided We Govern}を転機として、議論が蓄積されてきた。\citet*{Mayhew1991-rq}は、従来比較的広く論じられてきた命題である、「議会多数派と大統領の選出政党が異なる分割政府のもとでは、議会での法案審議は停滞する」という命題に対して、重要な法案についての議決数は分割政府下でも明確に低下しているわけではないことを示した。\\
-　立法生産性と分割政府との関係はその後も多面的に検討がなされた。\\
+　議会研究において、立法生産性はどのように論じられてきたのだろうか。以下では、立法生産性をめぐる近年の議論を概観し、政策領域ごとに立法生産を検討することの重要性と、そうした分析が十分なされていないことを指摘する。\\
+　議会の立法生産性についての議論は、David Mayhewの\textit{Divided We Govern}を転機として、近年議論が蓄積されてきた。\citet*{Mayhew1991-rq}は、従来比較的広く論じられてきた命題である、「議会多数派と大統領の選出政党が異なる分割政府のもとでは、議会での法案審議は停滞する」という命題に対して、重要な法案\footnote{アメリカ議会における立法では、多数の法案が提出される一方で、実際に審議される法案は極めて少ない。提出される法案の中で、委員会での審議にかけられるものは例年提出法案の1割程度に止まっている。Mayhewは一定の基準を満たした法案を対象として分析を構成することで従来指摘されていた関係が実際には常に観察されるものではないことを示した。}についての議決数は分割政府下でも明確に低下しているわけではないことを示した。\\
+　立法生産性と分割政府との関係はその後も多面的に検討がなされた。\citet*{Krehbiel1998-ob,Krehbiel2010-ob}は議会と大統領の選出政党の組み合わせではなく、議員個々人の政策的立場とその組み合わせから立法生産性を論じた。\\
 　Sarah Binderは従来の立法生産性の議論が、単に議会が法案をどの程度審議してきたのかという数の問題に終始してきたことを問題視した。むしろ重要なのは社会的な課題を議会がどの程度解決できているかという点であり、課題のリストの中から議会がどの程度それらの課題に対して、法案提出という点で応答しているのかが重要であると論じた。\citep*{Binder2003-bn,Binder2017-wr}\\
 　\citet*{Binder2003-bn}の議論の主眼は、立法のこう着状態を議会間の政策位置の違いなどに注目して説明する点にあり、政策領域への注目度の高さがこう着状態を緩和する傾向にあることを示唆しているに過ぎない。この点をさらに検討しているのが\citet*{Adler2013-ay}である。この議論では、政策領域への注目度が当該政策領域における立法生産を促進すると指摘している。\\
+　政策領域ごとの検討を重視する議論は近年の議会をめぐる議論の中で注目されている視座である。\citet*{Lapinski2008-lr,Lapinski2013-jl}はアメリカ史の知見を基盤とした政策領域の分類方式を作成し、分極化や立法生産といった近年のアメリカ政治で注目されている課題は、政策領域ごとに異なる振る舞いを示すことを指摘している。\\
 
 \subsection{「政策領域への注目度」とは何か}
-　\citet*{Binder2003-bn}や\citet*{Adler2013-ay}の議論は、従来の議会におけるこう着状態をめぐる議論が注目してきた政治的変数だけではなく、社会的変数である有権者の関心や社会的な注目度といった要素に目を向けることの重要性を示すものである。\\
-　政策領域に対する注目度を説明変数として政治現象を論じる枠組みは大まかには2つの議論が存在する。第一には、議員が選挙区の関心をいかに反映しているのかを主眼に据えた分析である。第二に挙げられるのは、社会的な関心の高さを、政策変化の契機として理解する議論である。\\
+　\citet*{Binder2003-bn}や\citet*{Adler2013-ay}の議論は、従来の議会におけるこう着状態をめぐる議論が注目してきた政治的変数だけではなく、社会的変数である有権者の関心や社会的な注目度といった要素に目を向けることの重要性を示すものである。では、そうした社会的な注目は従来どのように論じられてきたのだろうか。以下では、政策領域への社会的な注目度を論じてきた先行研究を検討し、注目度という変数が議会審議を促進する要因として理解されてきたことを確認する。\\
+　政策領域に対する注目度を説明変数として政治現象を論じる枠組みは大まかには2つに分類できる。第一には、議員が選挙区の関心をいかに反映しているのかを主眼に据えた分析である。第二に挙げられるのは、社会的な関心の高さを、政策変化の契機として理解する議論である。\\
 　第一の、議員と選挙区との関係を論じる議論では、議員は選挙区の関心の高さに応じて法案の提出、投票を行なっていると考える。\\
-　第二の、政策変化の契機として注目度の高さを捉える分析では、政策の固着性を前提として政策変化が生じるためには、従来検討されて来なかった新しい側面が導入されることによる政治的均衡の変化が必要だと考える。\citep*{Baumgartner1993-bc}\\
-　以上の議論はいずれにしても、政策領域に対する注目度や関心の高さを、議会のこう着状態を打破する変数として機能することを前提としている。\\
-　他方で、政策領域に対する注目度は必ずしも政策変化や審議を推し進める変数として機能するとは限らない。\\
+　第二の、政策変化の契機として注目度の高さを捉える分析では、特定の政策領域が関心を集めることで、従来の政治的均衡が崩壊し、大きな政策的変化につながると考える。\citep*{Baumgartner2015-ee,John2018-im}\citet*{Baumgartner1993-bc,Baumgartner2015-ee}は、政策の多くが極めて変化しにくいものである一方で、一定の条件下では急速かつ大規模な変化が生じていることを示した。こうした一定期間の強い安定性と短期にかつ急速な変化という両面の現象を説明するために、検討されたのが社会的な注目という変数である。\\
+　こうした社会的注目によって政策的変化がもたらされるという発想はその後の政策変化の議論に引き継がれている。\citet*{Birkland1997-lq,Birkland1998-xp}は、自然災害などの社会的に注目を集める現象が生じた場合に、従来安定性が高かった政策状況が変化しうることを指摘した。\citet*{Sabatier1993-id}の議論はこうした社会的関心の高さという要因が、政治的アクターの連合状況を媒介して政策変化を生じうることを指摘している。\\
+　以上の議論は共に、政策領域に対する注目度や関心の高さを、議会審議や政策変化をもたらす要因として理解している。こうした社会的な注目度が政策変化や積極的な議員行動をもたらすという発想は、議会研究においても引き継がれている。\citet*{Binder2017-wr}や\citet*{Adler2013-ay}の注目度がこう着状態を緩和するという議論だけではなく、議会における政党の役割を論じた\citet*[Ch.6]{Cox2005-pn}においても、政党が自らに不都合な法案審議を阻害するコストとして社会的な注目度が論じられている。これも、注目度が高いという要因が政策的変化を促進する機能を果たしているという理解である。\\
+
+\subsection{注目度による負の影響}
+　他方で、政策領域に対する注目度は必ずしも政策変化や審議を推し進める変数として機能するとは限らない。以下、簡単に社会的な注目度の高さが政策変化を阻害する可能性について検討する。\\
+　政策領域が社会的な注目を集めるという現象は、法案を提出する側からすれば自らの法案に対する追い風として機能することが考えられる。議員が選挙区民の代表者である以上は、有権者の意思を無視して立法活動を行うということは選挙上のコストを支払うことになる。もし、社会的に注目度の高い法案に対して反対するという行為が有権者の意思にそぐわないものであれば、反対の立場を表明した議員は選挙戦略上一定のコストを支払うことになるだろう。こうして、社会的な注目度の高い法案に反対する、もしくはその審議を阻害することは選挙におけるコストとして機能し、結果として法案審議がより容易に進む要因となると考えられる。これが先行研究が社会的な注目度を法案通過や政策変化にとって好ましい状況として理解してきた所以である。\\
+　しかし、この議論には重要な仮定が存在している。社会的に注目を集める法案に対する有権者もしくは選挙区民の立場が提出された法案を可決すべきというものである場合に、以上の議論は成立する。端的に言えば、法案に対して賛成することが、多くの選挙区民にとって好ましいのであれば社会的注目度はこう着状態を緩和すると考えられる。\\
+　では、有権者の多くが特定の政策的立場を共有しているという現象はアメリカ政治でどの程度生じているといえるだろうか。エリートレベルで考える場合、結論は明確だろう。アメリカ史の中で党派的な投票行動が緩和されるのは極めて稀な現象であり、多くの時期は党派的な対立が存在してきた。\citep*{Poole2007-ir,}
 　すなわち、政策領域に対して関心が高まるという現象は、法案審議を停滞させる機能を果たす場合もあり得るということである。\\
 　以下では、社会的な注目度と法案審議との関係性を観察データを用いて分析する。\\
 
@@ -94,12 +102,9 @@
 　分析には単純な最小二乗法(OLS)を利用し、政策領域ごとの\textcircled{\scriptsize 1}法案提出数(上院/下院)、\textcircled{\scriptsize 2}議決に付された法案数(上院/下院)、\textcircled{\scriptsize 3}立法化された法案数を従属変数としたモデルについて上述の独立変数・統制変数を投入した分析を行った。\\
 
 \section{分析結果}
-ここに分析結果
-
-
 \begin{table}[h]
   \caption{House (Bill Introduction)}
-  %\centering
+  \centering
   \hspace{-1cm}
 
   \begin{tabular}[t]{lccc}
@@ -127,13 +132,9 @@
     \bottomrule
     \multicolumn{4}{l}{\rule{0pt}{1em}. p $<$ 0.1, * p $<$ 0.05, ** p $<$ 0.01, *** p $<$ 0.001}\\
   \end{tabular}
-\end{table}
+  \end{table}
 
-　まず、法案提出について検討する。表1は、政策領域ごとに下院に提出された法案数を独立変数と統制変数を投入して回帰式を推定した点推定値及び各推定値のp値である。まず指摘できるのは、下院に提出された法案では有権者の関心度合い(Gallup MIP)が一貫して有意に正の推定値を示している点である。これは、議会に対して提出される法案全体で見た場合に、有権者が関心を持っている争点が議会に反映されやすいことを示しており、議員が選挙区民に応答的に法案提出を行っているという既存の知見と整合的な結果である。\citep*{Page1983-bx,Monroe1998-ty,Burstein2003-vs}\\
-　次に、メディアによる報道の効果であるが、点推定値は正であるもののp値が大きく、有意とは言えない。
-　統制変数についてはおおよそ先行研究に整合的な推定値が導出されているといえる。分割政府ダミーの点推定値は負であるものの、有意ではない。これは、統一政府か否かが立法生産に対して明確な影響を及ぼさないとした\citet*{Mayhew1991-rq}の知見と整合的なものである。また、多数党によって提出される法案が少数党に比べて多いことも、多数党が議事運営に際して大きな影響力を維持していることから考えれば妥当なことであろう。\citep*{Sinclair2016-kh,Cox2005-pn,Cox2007-xq}
-
-\begin{table}[htbp]
+\begin{table}[h]
 
   \caption{Senate (Bill Introduction)}
   \centering
@@ -162,8 +163,118 @@
   \bottomrule
   \multicolumn{4}{l}{\rule{0pt}{1em}. p $<$ 0.1, * p $<$ 0.05, ** p $<$ 0.01, *** p $<$ 0.001}\\
   \end{tabular}
+  \end{table}
 
-\end{table}
+\begin{table}[h]
+
+  \caption{House (Bill On Passage Vote)}
+  \centering
+  \begin{tabular}[t]{lccc}
+  \toprule
+    & NYT v. Bill & MIP v. Bill & NYT + MIP v. Bill\\
+  \midrule
+  NYT Coverage & \num{-0.343}* &  & \num{-0.378}**\\
+   & (\num{0.015}) &  & (\num{0.008})\\
+  Gallup MIP &  & \num{2.741} & \num{3.637}\\
+   &  & (\num{0.214}) & (\num{0.102})\\
+  Divided Government (dummy) & \num{0.394}. & \num{0.342} & \num{0.400}.\\
+   & (\num{0.071}) & (\num{0.117}) & (\num{0.067})\\
+  Bills from Majority Party (dummy) & \num{4.273}*** & \num{4.276}*** & \num{4.275}***\\
+   & (\num{0.000}) & (\num{0.000}) & \vphantom{1} (\num{0.000})\\
+  Major Topic & Yes & Yes & Yes\\
+  Election Year (dummy) & \num{-1.642}*** & \num{-1.641}*** & \num{-1.643}***\\
+   & (\num{0.000}) & (\num{0.000}) & (\num{0.000})\\
+  Num.Obs. & \num{819} & \num{819} & \num{819}\\
+  \midrule
+  AIC & \num{4106.5} & \num{4111.0} & \num{4105.7}\\
+  BIC & \num{4224.2} & \num{4228.7} & \num{4228.1}\\
+  Log.Lik. & \num{-2028.234} & \num{-2030.494} & \num{-2026.852}\\
+  F & \num{40.826} & \num{40.411} & \num{39.319}\\
+  RMSE & \num{2.92} & \num{2.93} & \num{2.92}\\
+  \bottomrule
+  \multicolumn{4}{l}{\rule{0pt}{1em}. p $<$ 0.1, * p $<$ 0.05, ** p $<$ 0.01, *** p $<$ 0.001}\\
+  \end{tabular}
+  \end{table}
+
+\begin{table}[h]
+
+  \caption{Senate (Bill On Passage Vote)}
+  \centering
+  \begin{tabular}[t]{lccc}
+  \toprule
+    & NYT v. Bill & MIP v. Bill & NYT + MIP v. Bill\\
+  \midrule
+  NYT Coverage & \num{-0.361} &  & \num{-0.379}\\
+   & (\num{0.255}) &  & (\num{0.237})\\
+  Gallup MIP &  & \num{0.946} & \num{1.848}\\
+   &  & (\num{0.848}) & (\num{0.712})\\
+  Divided Government (dummy) & \num{-1.073}* & \num{-1.128}* & \num{-1.071}*\\
+   & (\num{0.028}) & (\num{0.020}) & (\num{0.029})\\
+  Bills from Majority Party (dummy) & \num{4.582}*** & \num{4.583}*** & \num{4.583}***\\
+   & (\num{0.000}) & (\num{0.000}) & \vphantom{1} (\num{0.000})\\
+  Major Topic & Yes & Yes & Yes\\
+  Election Year (dummy) & \num{-3.926}*** & \num{-3.925}*** & \num{-3.926}***\\
+   & (\num{0.000}) & (\num{0.000}) & (\num{0.000})\\
+  Num.Obs. & \num{831} & \num{831} & \num{831}\\
+  \midrule
+  AIC & \num{5516.8} & \num{5518.1} & \num{5518.7}\\
+  BIC & \num{5639.6} & \num{5640.9} & \num{5646.2}\\
+  Log.Lik. & \num{-2732.417} & \num{-2733.067} & \num{-2732.347}\\
+  F & \num{47.390} & \num{47.263} & \num{45.451}\\
+  RMSE & \num{6.58} & \num{6.59} & \num{6.59}\\
+  \bottomrule
+  \multicolumn{4}{l}{\rule{0pt}{1em}. p $<$ 0.1, * p $<$ 0.05, ** p $<$ 0.01, *** p $<$ 0.001}\\
+  \end{tabular}
+  \end{table}
+
+\begin{table}
+
+  \caption{Bill Enacted}
+  \centering
+  \begin{tabular}[t]{lccc}
+  \toprule
+    & NYT v. Bill & MIP v. Bill & NYT + MIP v. Bill\\
+  \midrule
+  NYT Coverage & \num{-0.282} &  & \num{-0.290}\\
+    & (\num{0.293}) &  & (\num{0.287})\\
+  Gallup MIP &  & \num{0.052} & \num{0.741}\\
+    &  & (\num{0.990}) & (\num{0.862})\\
+  Divided Government (dummy) & \num{-0.652} & \num{-0.695}. & \num{-0.651}\\
+    & (\num{0.116}) & (\num{0.093}) & (\num{0.117})\\
+  Bills from Majority Party (dummy) & \num{5.039}*** & \num{5.040}*** & \num{5.039}***\\
+    & (\num{0.000}) & (\num{0.000}) & \vphantom{1} (\num{0.000})\\
+  Major Topic & Yes & Yes & Yes\\
+  Election Year (dummy) & \num{-3.156}*** & \num{-3.155}*** & \num{-3.156}***\\
+    & (\num{0.000}) & (\num{0.000}) & (\num{0.000})\\
+  Num.Obs. & \num{829} & \num{829} & \num{829}\\
+  \midrule
+  AIC & \num{5230.7} & \num{5231.8} & \num{5232.7}\\
+  BIC & \num{5353.4} & \num{5354.6} & \num{5360.1}\\
+  Log.Lik. & \num{-2589.345} & \num{-2589.915} & \num{-2589.330}\\
+  F & \num{56.924} & \num{56.800} & \num{54.582}\\
+  RMSE & \num{5.58} & \num{5.59} & \num{5.59}\\
+  \bottomrule
+  \multicolumn{4}{l}{\rule{0pt}{1em}. p $<$ 0.1, * p $<$ 0.05, ** p $<$ 0.01, *** p $<$ 0.001}\\
+  \end{tabular}
+  \end{table}
+
+\subsection{法案提出における傾向}
+　第一に法案提出について検討する。表1は、政策領域ごとに下院に提出された法案数を独立変数と統制変数を投入して回帰式を推定した点推定値及び各推定値のp値である。まず指摘できるのは、下院に提出された法案では有権者の関心度合い(Gallup MIP)が一貫して有意に正の推定値を示している点である。これは、議会に対して提出される法案全体で見た場合に、有権者が関心を持っている争点が議会に反映されやすいことを示しており、議員が選挙区民に応答的に法案提出を行っているという既存の知見と整合的な結果である。\citep*{Page1983-bx,Monroe1998-ty,Burstein2003-vs}\\
+　次に、メディアによる報道の効果であるが、点推定値は正であるもののp値が大きく有意でない。メディアによる報道量と下院における法案提出傾向との間に明確な関係が存在しているとは言えないと理解すべきだろう。メディア報道と有権者の関心度合いを共に独立変数として投入したモデルでも点推定値、p値共にに大きな変化はないため、両者共にある程度一貫した傾向が観察されているといえる。\\
+　統制変数についてはおおよそ先行研究に整合的な推定値が導出されているといえる。分割政府ダミーの点推定値は負であるものの、有意ではない。これは、統一政府か否かが立法生産に対して明確な影響を及ぼさないとした\citet*{Mayhew1991-rq}の知見と整合的なものである。また、多数党によって提出される法案が少数党に比べて多いことも、多数党が議事運営に際して大きな影響力を維持していることから考えれば妥当なことであろう。\citep*{Sinclair2016-kh,Cox2005-pn,Cox2007-xq}\\
+　表2は、同じく提出法案についての分析を上院にも同様に行った結果である。おおよその結果は下院における分析と同様であり、有権者の関心度合いは有意でないものの点推定値が正である。統制変数の分割政府ダミーや多数党ダミーは推定値は異なるが同一の方向で推定値が導出されている。\\
+　下院と異なる結果が示されているのはメディア報道の影響である。両者ともに有意差ではないものの、下院では点推定値が正であったのに対して上院では推定値が負になっている。分析全体として観察数が小さいため明確な議論はできないが、2つの可能性が示唆される。第一に、上院と下院において法案提出の傾向は大きな差異がなく、単に観察数が少ないため点推定値が安定してないことが考えられる。第二の可能性として、上院と下院には法案提出傾向に差異があり、観察数が少ないためにp値が大きくなっている可能性がある\footnote{本分析からはこれ以上の知見を導出することはできないが、上院と下院で法案提出後の審議過程に差異がある\citep*{Sinclair2016-kh}ことからも、両者における議員の法案提出傾向に差がある可能性はあり、更なる検討が必要であると考えられる。}。\\
+　以上の知見をまとめると、法案の提出傾向に対して、有権者の関心度合いは正の影響を有すると考えられる。他方で、メディア報道は法案提出に対して明瞭な影響を与えているとは言えず、上院と下院との差異も法案提出に対して明確な差が示されるほどの違いがあるとは言えない。\\
+
+\subsection{議決法案における傾向}
+　第二に、実質的な法案審議に対してメディア報道と有権者の関心度合いがいかなる影響を示しているのかを分析する。表3は下院及び上院において議場での投票にかけられた法案数を被説明変数として同様の分析を行ったものである。\\
+　表3は下院について議決結果への効果を分析したものである。まず指摘できるのは、法案提出の場合と異なり、議決に至る法案数に対しては、メディア報道量の点推定値が負になっている。これは5\%水準で有意な結果であり、有権者の関心度合いを統制しても同様の結果が示されている。\\
+　有権者の関心度合いを示す点推定値は有意ではないものの、提出法案数同様に正の影響を示しており、こちらもメディア報道を統制しても大きな変化はない。統制変数についても大きな法案提出と大きな差異は見られない。\\
+　表4は上院について同様の分析を行ったものである。独立変数の点推定値については下院と大きな差はないが、上院の場合メディア報道の効果は有意でない。また、統制変数の中で分割政府が負の点推定値となっており、下院と若干異なっている。\\
+　ここまでの分析結果をまとめると以下のことが言える。まず、上下院で共にメディア報道の議決数に対する効果が負になっており、メディア報道量と議案審議数の間に負の関係性が存在することを示すといえる。これは先行研究が注目度という変数を法案審議や立法生産を促す変数として理解してきたこと\citep*{Binder2003-bn,Binder2017-wr,Adler2013-ay}とは明確に異なる結果である。この効果は有権者の関心度合いを統制した場合でも大きな変化がない。すなわち、メディア報道は特に法案の議決段階において立法生産をむしろ抑制する傾向が観察されたということである。\\
+
+\subsection{立法化された法案における傾向}
+　最後に、法律の立法数を被説明変数としたモデルについても検討する。表5が立法数と各変数との関係を示したものである。メディア報道・有権者の関心度合い共に有意差は観察されないものの、点推定値は表3及び4と同様の傾向を示している。\\
 
 
 
