--- a/writing/reference.bib
+++ b/writing/reference.bib
@@ -78,6 +78,70 @@
   language  = "en"
 }
 
+@BOOK{Adler2011-hz,
+  title     = "The Macropolitics of Congress",
+  author    = "Adler, E Scott and Lapinski, John S",
+  abstract  = "How do public laws, treaties, Senate confirmations, and other
+               legislative achievements help us to gain insight into how our
+               governmental system performs? This well-argued book edited by
+               Scott Adler and John Lapinski is the first to assess our
+               political institutions by looking at what the authors refer to
+               as legislative accomplishment. The book moves beyond current
+               research on Congress that focuses primarily on rules, internal
+               structure, and the microbehavior of individual lawmakers, to
+               look at the mechanisms that govern how policy is enacted and
+               implemented in the United States. It includes essays on topics
+               ranging from those dealing with the microfoundations of
+               congressional output, to large N empirical analyses that assess
+               current theories of lawmaking, to policy-centered case studies.
+               All of the chapters take a Congress-centered perspective on
+               macropolicy while still appreciating the importance of other
+               branches of government in explaining policy accomplishment. The
+               Macropolitics of Congress shines light on promising pathways for
+               the exploration of such key issues as the nature of political
+               representation. It will make a significant contribution to the
+               study of Congress and, more generally, to our understanding of
+               American politics. Contributors include E. Scott Adler, David
+               Brady, Charles M. Cameron, Brandice Canes-Wrone, Robert S.
+               Erikson, Grace R. Freedman, Valerie Heitshusen, John D. Huber,
+               Ira Katznelson, Keith Krehbiel, John S. Lapinski, David Leblang,
+               Michael B. MacKuen, David R. Mayhew, Nolan McCarty, Charles R.
+               Shipan, James A. Stimson, and Garry Young.",
+  publisher = "Princeton University Press",
+  month     =  oct,
+  year      =  2011,
+  keywords  = "Legislation; Political science; Voting; Politics; Public policy;
+               Lawmaking; Government; Statute; Ideology; Legislature;
+               Legislator; Politician; Divided government; Dummy variable
+               (statistics); Congress; Political party; Institution; Regime;
+               Veto; Bureaucrat; Cloture; World War II; Election; David R.
+               Mayhew; Political history; Theory; Probability; Member of
+               Congress; Decision-making; Two-party system; Rational choice
+               theory; Politics of the United States; Public opinion;
+               Prediction; Tax; Economics; Time series; Midterm election;
+               Employment; Supermajority; Measurement; Judiciary; Policy;
+               Telecommunication; Provision (contracting); Macroeconomics;
+               United States congressional committee; Regulation; Statistical
+               significance; Democracy; Cambridge University Press; Political
+               economy; Liberal conservatism; Woodrow Wilson; New
+               institutionalism; Filibuster in the United States Senate; Yale
+               University; Percentage; Jurisdiction; Acknowledgment (creative
+               arts and sciences); Interest rate; Implementation;
+               Bipartisanship; Unemployment; Appellate court; World War I;
+               Estimation; Deregulation; Lobbying; Government agency; United
+               States Congress; Inflation; Tariff; Calculation; Brookings
+               Institution; Campaign finance reform in the United States;
+               Separation of powers; Political agenda; Activism; Ira
+               Katznelson; Legislative history; The Administrative State;
+               Smoot--Hawley Tariff Act; Governance; Political philosophy;
+               Economic indicator; Executive director; University of Colorado;
+               Tax policy; National Policy; Determinant; Incumbent; Book;
+               Progressive Era; Popular sovereignty; Accounting; Commerce
+               Clause; Majority; Pendleton Civil Service Reform Act;
+               Operationalization",
+  language  = "en"
+}
+
 @BOOK{Adler2013-ay,
   title     = "Congress and the Politics of Problem Solving",
   author    = "Adler, E Scott and Wilkerson, John D",
@@ -1132,6 +1196,85 @@
   year      =  2010
 }
 
+@ARTICLE{Lapinski2008-lr,
+  title     = "Policy substance and performance in American lawmaking,
+               1877--1994",
+  author    = "Lapinski, John S",
+  abstract  = "This article reconsiders the importance of including policy
+               issue content and legislative significance in our study of
+               lawmaking. Specifically, it demonstrates theoretically why
+               lawmaking might vary by policy substance and empirically shows
+               how incorrect conclusions would be drawn if lawmaking is studied
+               by pooling enactments instead of disaggregating laws by policy
+               issue content. It accomplishes this by bringing new tools,
+               including a policy classification system and a way to measure
+               the significance of public laws, to help overcome an array of
+               measurement-related problems that have stymied our ability to
+               better understand lawmaking. The policy coding schema introduced
+               is applied, by careful individual human coding, to every public
+               law enacted between 1877 and 1994 (n = 37,767). The policy issue
+               and significance data are used to construct a number of new
+               measures of legislative performance and are useful to test
+               hypotheses within studies of Congress and American Political
+               Development.",
+  journal   = "Am. J. Pol. Sci.",
+  publisher = "Wiley",
+  volume    =  52,
+  number    =  2,
+  pages     = "235--251",
+  month     =  apr,
+  year      =  2008,
+  language  = "en"
+}
+
+@BOOK{Lapinski2013-jl,
+  title     = "The Substance of Representation",
+  author    = "Lapinski, John S",
+  abstract  = "Lawmaking is crucial to American democracy because it completely
+               defines and regulates the public life of the nation. Yet despite
+               its importance, political scientists spend very little time
+               studying the direct impact that the politics surrounding a
+               particular issue has on lawmaking. The Substance of
+               Representation draws on a vast range of historical and empirical
+               data to better understand how lawmaking works across different
+               policy areas. Specifically, John Lapinski introduces a
+               theoretically grounded method for parsing policy issues into
+               categories, and he shows how policymaking varies in predictable
+               ways based on the specific issue area being addressed. Lapinski
+               examines the ways in which key factors that influence
+               policymaking matter for certain types of policy issues, and he
+               includes an exhaustive look at how elite political polarization
+               shifts across these areas. He considers how Congress behaves
+               according to the policy issue at hand, and how particular
+               areas--such as war, sovereignty issues, and immigration
+               reform--change legislative performance. Relying on records of
+               all Congressional votes since Reconstruction and analyzing
+               voting patterns across policy areas from the late nineteenth to
+               late twentieth centuries, Lapinski provides a comprehensive
+               historical perspective on lawmaking in order to shed light on
+               current practices. Giving a clear picture of Congressional
+               behavior in the policymaking process over time, The Substance of
+               Representation provides insights into the critical role of
+               American lawmaking.",
+  publisher = "Princeton University Press",
+  month     =  sep,
+  year      =  2013,
+  keywords  = "American democracy; American lawmaking; policymaking process;
+               elite political polarization; U.S. Congress; Congressional
+               behaviour; policymaking; politics; substance-oriented research;
+               lawmaking; U.S. lawmakers; political preferences; Theodore Lowi;
+               policy issue substance; American politics; congressional
+               studies; American political development; deductive theory; roll
+               call voting; policy classification schemas; political
+               polarization; Congress; House of Representatives; U.S. senators;
+               elite polarization; 95th Congress; U.S. Comgress; legislative
+               behavior; legislative output; roll call votes; legislative
+               accomplishment; policy-coding schema; legislative productivity;
+               policy issue area; policy substance; legislation; contemporary
+               lawmaking; normal science; political behavior",
+  language  = "en"
+}
+
 @ARTICLE{Lawrence2006-ed,
   title     = "Who wins? Party effects in legislative voting",
   author    = "Lawrence, E D and Maltzman, F and Smith, S S",
@@ -1420,7 +1563,7 @@
 
 % The entry below contains non-ASCII chars that could not be converted
 % to a LaTeX equivalent.
-@BOOK{Poole2017-ir,
+@BOOK{Poole2007-ir,
   title     = "Ideology \& congress: A political economic history of roll call
                voting",
   author    = "Poole, Keith T and Rosenthal, Howard",
@@ -1428,7 +1571,7 @@
                use the word ideology as a shorthand code for these positions.
                Henceforth in this book, we use ideology as a shorthand in …",
   publisher = "Routledge",
-  year      =  2017
+  year      =  2007
 }
 
 % The entry below contains non-ASCII chars that could not be converted
@@ -1771,5 +1914,16 @@
   number  =  4,
   pages   = "55--90",
   year    =  2020
+}
+
+%% データ関連
+@MISC{noauthor_undated-hr,
+  title        = "Historical Statistics about Legislation in the {U.S}.
+                  Congress -",
+  booktitle    = "{GovTrack.us}",
+  abstract     = "Historical statistics about bills in the U.S. Congress.",
+  howpublished = "\url{https://www.govtrack.us/congress/bills/statistics}",
+  note         = "Accessed: 2022-8-20",
+  language     = "en"
 }
 
