--- a/writing/main.tex
+++ b/writing/main.tex
@@ -16,7 +16,7 @@
 \maketitle
 
 \begin{abstract}
-アメリカ議会における立法生産性の議論は、議会が適切に機能しているのかという問題関心から多くの分析が蓄積されてきた。しかし、立法生産がアメリカ社会に応答的な形でなされてきたのかについては十分な検討がなされていない。本稿では、1984年から2013年までのデータを用いて、政策領域に対する社会的な注目度が、当該政策領域における立法生産性といかなる関係を示すのかを分析した。分析の結果、政策領域に対する注目度が高まることで、議会の生産性が低下し得ることが示された。加えて、こうした影響は議会の審議段階によっても異なることが観察された。
+アメリカ議会における立法生産性の議論は、議会が適切に機能しているのかという問題関心から多くの分析が蓄積されてきた。しかし、立法生産がアメリカ社会に応答的な形でなされてきたのかについては十分な検討がなされていない。本稿では、1994年から2013年までのデータを用いて、政策領域に対する社会的な注目度が、当該政策領域における立法生産性といかなる関係を示すのかを分析した。分析の結果、政策領域に対する注目度が高まることで、議会の生産性が低下し得ることが示された。加えて、こうした影響は議会の審議段階によっても異なることが観察された。
 \end{abstract}
 
 
@@ -24,18 +24,19 @@
 - motivation: 
 %アメリカ議会における立法生産性の議論は、議会が適切に機能しているのかという問題関心から多くの分析が蓄積されてきた。
 \\
-　アメリカ議会が十分に機能しているのかという問題は、議会に対する根本的な課題のひとつとして大きな関心の対象となってきた。\\
+　アメリカ議会が十分に機能しているのかという問題は、議会に対する根本的な課題のひとつとして大きな関心の対象となってきた。フィリバスター\citep*{Koger2010-uc,Binder2001-eb}や分割政府の増加\citet*{Fiorina1992-iz,Fiorina1992-mp}などによって立法の停滞状況が生じてきていることは多くの議会研究者に共有された問題意識であり、さまざまな視座から分析が蓄積されてきている。\\
 - main contribution: 
 %しかし、立法生産がアメリカ社会に応答的な形でなされてきたのかについては十分な検討がなされていない。本稿では、1984年から2013年までのデータを用いて、政策領域に対する社会的な注目度が、当該政策領域における立法生産性といかなる関係を示すのかを分析した。
 \\
-　本稿では、議会が社会に応答しているのかという問題を立法生産性の観点から検討し、社会的に関心の高まっている政策領域では、逆に立法が停滞するという関係が観察されることを指摘する。\\
-　近年の立法生産性(legislative productivity)にかかわる議論はDavid Mayhewの\textit{Divided We Govern}を転機として様々な議論が蓄積されてきた。\\
+　本稿では、議会が社会に応答しているのかという問題を立法生産性の観点から検討し、社会的に関心の高まっている政策領域では、逆に立法が停滞するという関係が観察されうることを指摘する。近年、アメリカ議会の機能をめぐる議論の中で、社会的な関心が高い政策領域における立法活動をどの程度行えているのかが重視されるようになってきている。\citep*{Binder2003-bn,Binder2017-wr,Adler2013-ay}しかし、こうした議論が前提としている社会的な注目度が高まれば法案審議が加速するという関係は、有権者全体に共有される選好という実証的に正当化困難な仮定に支えられている。本稿は、法案審議と社会的注目度のデータを用いて注目度の高い政策領域で審議が停滞するという傾向が存在することを示す。\\
+　近年の立法生産性(legislative productivity)にかかわる議論はDavid Mayhewの\textit{Divided We Govern}を転機として様々な議論が蓄積されてきた。\citet*{Mayhew1991-rq}が分割政府と立法生産性との間に有意な関係が観察できないと指摘したことを皮切りに、歴史的な変化\citep*{Fiorina1992-iz}や議員の選好による説明\citep*{Krehbiel1998-ob,Krehbiel2010-ob}、政党と分極化\citep*{Thorson1998-vs,Jones2001-ds}、社会的関心度合いとの関係\citep*{Gibson1995-ou,Coleman1999-ld,Binder1999-fl,Binder2003-bn,Binder2017-wr}など様々な面から検討が重ねられてきた。\\
 　Sarah Binderは立法生産性の議論に、「議会が社会の問題に適切に対応しているのか」という応答性の問題から再検討を加え、社会的な注目度が議会における膠着状態を緩和させる可能性を指摘した。\citep*{Binder2003-bn}\\
 \\
 - in detail discription:
 %分析の結果、政策領域に対する注目度が高まることで、議会の生産性が低下し得ることが示された。加えて、こうした影響は議会の審議段階によっても異なることが観察された。
 \\
-　議会の立法生産性と社会的注目度との関係は、その重要性に比して分析が少ない\footnote{重要な例外として\citet*{Adler2013-ay}}。本稿では政策領域への注目度と立法生産との関係を分析することで、その重要性を確認すると共に従来の議論で論じられてこなかった関係性の存在を指摘する。\\
+　本稿は\citet*{Adler2013-ay}による分析における
+議会の立法生産性と社会的注目度との関係は、その重要性に比して分析が少ない\footnote{重要な例外として\citet*{Adler2013-ay}}。本稿では政策領域への注目度と立法生産との関係を分析することで、その重要性を確認すると共に従来の議論で論じられてこなかった関係性の存在を指摘する。従来も社会的な関心度合いの高さが議会における立法生産性に対していかなる影響を及ぼすかについては議論がなされてきた。しかし、それらの\\
 　また、先行研究では議会審議の程度を論じる際に、異なる法案審議の段階を用いた分析がなされてきた。本稿では、異なる審議段階における議会の応答性を検討することで、社会的な注目度が法案審議に対して与える影響は、どの段階の法案審議かによっても異なっていることを指摘する。\\
 
 \section{先行研究}
