--- a/writing/reference.bib
+++ b/writing/reference.bib
@@ -328,7 +328,6 @@
   language  = "en"
 }
 
-
 @BOOK{Baumgartner1993-bc,
   title     = "Agendas and Instability in American Politics",
   author    = "Baumgartner, Frank R and Jones, Bryan D",
@@ -409,6 +408,80 @@
   pages     = "741--773",
   month     =  oct,
   year      =  2013
+}
+
+@ARTICLE{Binder1999-fl,
+  title     = "The Dynamics of Legislative Gridlock, 1947--96",
+  author    = "Binder, Sarah A",
+  abstract  = "David Mayhew's Divided We Govern(1991) sparked an industry of
+               scholars who alternately challenge or confirm the work on
+               theoretical and empirical grounds. Still, we lack a definitive
+               account of the proportions and causes of legislative gridlock. I
+               revisit the effects of elections and institutions on policy
+               outcomes to propose an alternative theory of gridlock: The
+               distribution of policy preferences within the parties, between
+               the two chambers, and across Congress more broadly is central to
+               explaining the dynamics of gridlock. To test the model, I
+               construct a measure that assesses legislative output in
+               proportion to the policy agenda. Using newspaper editorials to
+               identify every salient legislative issue between 1947 and 1996,
+               I generate Congress-by-Congress gridlock scores and use them to
+               test competing explanations. The results suggest that
+               intrabranch conflict---perhaps more than interbranch
+               rivalry---is critical in shaping deadlock in American politics.",
+  journal   = "Am. Polit. Sci. Rev.",
+  publisher = "Cambridge University Press",
+  volume    =  93,
+  number    =  3,
+  pages     = "519--533",
+  month     =  sep,
+  year      =  1999
+}
+
+@BOOK{Binder2001-eb,
+  title     = "Politics or Principle?: Filibustering in the United States
+               Senate",
+  author    = "Binder, Sarah A and Smith, Steven S",
+  abstract  = "Is American democracy being derailed by the United States Senate
+               filibuster? Is the filibuster an important right that improves
+               the political process or an increasingly partisan tool that
+               delays legislation and thwarts the will of the majority? Are
+               century-old procedures in the Senate hampering the institution
+               from fulfilling its role on the eve of the 21st century?The
+               filibuster has achieved almost mythic proportions in the history
+               of American politics, but it has escaped a careful, critical
+               assessment for more than 50 years. In this book, Sarah Binder
+               and Steven Smith provide such an assessment as they address the
+               problems and conventional wisdom associated with the Senate's
+               long-standing tradition of extended debate.The authors examine
+               the evolution of the rules governing Senate debate, analyze the
+               consequences of these rules, and evaluate reform proposals. They
+               argue that in an era of unprecedented filibustering and related
+               obstructionism, old habits are indeed undermining the Senate's
+               ability to meet its responsibilities. Binder and Smith
+               scrutinize conventional wisdom about the filibuster---and show
+               that very little of it is true. They focus on five major myths:
+               that unlimited debate is a fundamental right to differentiate
+               the Senate from the House of Representatives; that the Senate's
+               tradition as a deliberative body requires unlimited debate; that
+               the filibuster is reserved for a few issues of the utmost
+               national importance; that few measures are actually killed by
+               the filibuster; and that senators resist changing the rules
+               because of a principled commitment to deliberation. In revising
+               conventional wisdom about the filibuster, Binder and Smith
+               contribute to ongoing debates about the dynamics of
+               institutional change in the American political system. The
+               authors conclude by suggesting reforms intended to enhance the
+               power of determined majorities while preserving the rights of
+               chamber minorities. They advocate, for example, lowering the
+               number of votes required to end debate while increasing the
+               amount of time for senators to debate controversial bills.
+               Reform is possible, they suggest, that is consistent with the
+               Senate's unique size and responsibilities.",
+  publisher = "Brookings Institution Press",
+  month     =  sep,
+  year      =  2001,
+  language  = "en"
 }
 
 @BOOK{Binder2003-bn,
@@ -664,6 +737,32 @@
   year      =  1972
 }
 
+@ARTICLE{Coleman1999-ld,
+  title     = "Unified Government, Divided Government, and Party Responsiveness",
+  author    = "Coleman, John J",
+  abstract  = "Revisionist accounts conclude that divided and unified
+               government do not differ significantly in the production of
+               ``important'' public policy. I argue instead that when one
+               theoretically reclaims the concerns about party responsiveness
+               and institutional features of American politics that have
+               animated party government scholars, unified government is
+               significantly more productive than divided government. Employing
+               a range of measures of important legislative enactments in the
+               postwar period, I find that unified government produces greater
+               quantities of significant enactments and is more responsive to
+               the public mood than is divided government. The evidence
+               suggests that parties do, as party government theorists
+               maintain, generate incentives to cooperation that help transcend
+               some of the policymaking gaps created by the Constitution.",
+  journal   = "Am. Polit. Sci. Rev.",
+  publisher = "Cambridge University Press",
+  volume    =  93,
+  number    =  4,
+  pages     = "821--835",
+  month     =  dec,
+  year      =  1999
+}
+
 @ARTICLE{Cox2001-eu,
   title     = "Agenda Setting in the U. S. House: A {Majority-Party} Monopoly?",
   author    = "Cox, Gary W",
@@ -860,6 +959,32 @@
   year      =  2008
 }
 
+@ARTICLE{Fiorina1992-mp,
+  title     = "An Era of Divided Government",
+  author    = "Fiorina, Morris P",
+  journal   = "Polit. Sci. Q.",
+  publisher = "[Academy of Political Science, Wiley]",
+  volume    =  107,
+  number    =  3,
+  pages     = "387--410",
+  year      =  1992
+}
+
+@BOOK{Fiorina1992-iz,
+  title     = "Divided Government",
+  author    = "Fiorina, Morris P",
+  abstract  = "The 1994 Mid-Term elections, the \?\`Republican Revolution\?\`
+               that returned control of both Houses of Congress to the
+               Republicans for the first time in over 40 years, returned us to
+               the state of \?\`divided government\?\` that has been the
+               political norm since the 1950s. In this timely new revision of
+               his instant classic, Morris Fiorina outlines the causes and
+               consequences of \?\`ticket-splitting\?\` and divided government.",
+  publisher = "Macmillan",
+  year      =  1992,
+  language  = "en"
+}
+
 @ARTICLE{Gailmard2007-yj,
   title    = "Negative agenda control in the senate and house: Fingerprints of
               majority party power",
@@ -895,6 +1020,34 @@
   year         =  2006,
   howpublished = "\url{https://news.gallup.com/poll/14338/most-important-problem.aspx}",
   note         = "Accessed: 2022-10-7"
+}
+
+@ARTICLE{Gibson1995-ou,
+  title     = "Issues, Coalitions, and Divided Government",
+  author    = "Gibson, Martha L",
+  abstract  = "This study analyzes House roll-call votes from 1957-1990 in
+               order to assess the effects of divided government on support for
+               the president's preferred legislation once it reaches the House
+               floor. By disaggregating analysis into specific policy areas,
+               the results demonstrate that the impact of divided government on
+               presidential support varies systematically across policy areas
+               by the degree to which the policy cross-cuts society. Broadly
+               cross-cutting policy areas are more prone to partisan conflict
+               and, hence, to the effects of divided government, while more
+               sector-specific policy areas generate conflict along bipartisan
+               and institutional lines as well as along partisan ones. Support
+               scores on sector specific policies, as a result, are not
+               significantly prone to the influence of divided government. The
+               results suggest caution in drawing conclusions that imply a
+               uniform impact of divided government or a single remedy to
+               reform our system of government.",
+  journal   = "Congress \& the Presidency",
+  publisher = "Routledge",
+  volume    =  22,
+  number    =  2,
+  pages     = "155--166",
+  month     =  sep,
+  year      =  1995
 }
 
 @ARTICLE{Gray2019-sv,
@@ -1098,6 +1251,33 @@
   month     =  dec,
   year      =  2018,
   language  = "en"
+}
+
+@ARTICLE{Jones2001-ds,
+  title     = "Party Polarization and Legislative Gridlock",
+  author    = "Jones, David R",
+  abstract  = "This article investigates how parties affect legislative
+               gridlock-the inability of government to enact significant
+               proposals on the policy agenda. Conventional accounts suggest
+               that divided party control of govemment causes such stalemate. I
+               offer an alternative partisan model of gridlock that
+               incorporates party polarization, party seat division, and the
+               interaction between these two factors. Using an original data
+               set of major legislative proposals considered between 1975 and
+               1994, I find that divided govemment does not affect gridlock
+               once party polarization and party seat division are taken into
+               account. Instead, I find that higher party polarization
+               increases the likelihood of encountering gridlock on a given
+               proposal, but that the magnitude of this increase diminishes to
+               the extent that a party is close to having enough seats to
+               thwart filibusters and vetoes.",
+  journal   = "Polit. Res. Q.",
+  publisher = "SAGE Publications Inc",
+  volume    =  54,
+  number    =  1,
+  pages     = "125--141",
+  month     =  mar,
+  year      =  2001
 }
 
 % The entry below contains non-ASCII chars that could not be converted
@@ -1825,6 +2005,36 @@
   pages     = "157--185",
   month     =  may,
   year      =  2010
+}
+
+@ARTICLE{Thorson1998-vs,
+  title     = "Divided Government and the Passage of Partisan Legislation,
+               1947-1990",
+  author    = "Thorson, Gregory R",
+  abstract  = "Recent literature has provided some evidence that the presence
+               of di vided government does not affect the amount of significant
+               legislation passed by Congress and enacted into law (Mayhew
+               1991). In this article, I argue that although there may not be a
+               difference in the absolute num ber of bills passed during
+               unified and divided periods, there nevertheless may be an
+               important difference in the formation of coalitions1 during
+               divided and unified periods. Specifically, I argue that party
+               unity votes that favor the dominant party 2 are more likely to
+               form on final votes of passage during periods of unified
+               government. I use regression analysis and probit analysis to
+               determine if there is empirical support for this hypothesized
+               difference in coalition formation. I find that the presence of
+               unified government significantly increases the likelihood that a
+               bill will pass through Congress with a party unity vote favoring
+               the dominant party The estimates are statistically significant
+               for both the House and the Senate.",
+  journal   = "Polit. Res. Q.",
+  publisher = "SAGE Publications Inc",
+  volume    =  51,
+  number    =  3,
+  pages     = "751--764",
+  month     =  sep,
+  year      =  1998
 }
 
 @MISC{US_Senate2020-xq,
